--- a/Health/app/src/main/res/drawable/background_button_statistic_water3.xml
+++ b/Health/app/src/main/res/drawable/background_button_statistic_water3.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:state_pressed="true">
+        android:state_checked="true">
         <shape
             android:shape="rectangle">
-            <corners android:radius="30dp"/>
-            <solid android:color="@color/blueLightPressed"/>
+            <corners
+                android:topRightRadius="30dp"
+                android:bottomRightRadius="30dp"/>
+            <solid android:color="@color/blueMiddle"/>
 
         </shape>
     </item>
@@ -13,7 +15,9 @@
     <item>
         <shape
             android:shape="rectangle">
-            <corners android:radius="30dp" />
+            <corners
+                android:topRightRadius="30dp"
+                android:bottomRightRadius="30dp"/>
             <solid android:color="@color/blue" />
 
         </shape>
