--- a/Health/app/src/main/res/layout/activity_home.xml
+++ b/Health/app/src/main/res/layout/activity_home.xml
@@ -26,9 +26,9 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/menuImage"
+                android:id="@+id/iv_menu"
                 android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_menu"
                 android:tint="@color/white" />
 
