--- a/Health/app/src/main/res/layout/activity_registration.xml
+++ b/Health/app/src/main/res/layout/activity_registration.xml
@@ -10,9 +10,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:elevation="5dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
