--- a/Health/app/src/main/res/layout/fragment_water.xml
+++ b/Health/app/src/main/res/layout/fragment_water.xml
@@ -8,16 +8,18 @@
     tools:context=".FragmentWater">
 
     <TextView
+        android:id="@+id/tv_goalWater"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="Цель: 2000"
+        android:text="Цель: 0/2000"
         android:textColor="@color/blueMiddle"
         android:textSize="35sp"
         android:gravity="center"/>
 
 
     <ProgressBar
+        android:id="@+id/pb_goalWater"
         android:progressDrawable="@drawable/water_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
@@ -25,27 +27,33 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:progress="8" />
+        android:progress="0" />
 
 
     <ImageView
+        android:id="@+id/iv_waterDrop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/water_drop_cry"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:text="—"
             android:theme="@style/Widget.AppCompat.Button"
@@ -55,38 +63,47 @@
             android:textStyle="bold"/>
 
         <EditText
+            android:id="@+id/et_volumeWater"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
             android:layout_gravity="center"
             android:inputType="number"
-            android:hint="Кол-во мл"
-            android:textColor="@color/blueMiddle"
+            android:hint="мл"
+            android:textColor="@color/blue"
             android:textColorHint="@color/purpleHint"
             android:textSize="25sp"
             android:background="@drawable/background_edit_text_authorization"
             android:gravity="center"/>
 
         <Button
+            android:id="@+id/btn_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="15dp"
             android:layout_weight="1"
+            android:background="@drawable/background_fragment_water_button"
             android:text="+"
             android:textColor="@color/white"
-            android:background="@drawable/background_fragment_water_button"
             android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
 
     <Button
+        android:id="@+id/btn_statistics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:text="Стастистика"/>
+        android:text="Статистика"
+        android:textSize="25sp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:background="@drawable/background_fragment_water_button"/>
 </LinearLayout>
