--- a/Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Health/app/src/main/res/layout/fragment_profile.xml
@@ -34,12 +34,13 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:text="Антон Ткачев"
+            android:text="Имя Фамилия"
             android:textSize="35sp"
             android:textColor="@color/blueDarkDark"/>
 
@@ -79,10 +80,11 @@
                     android:background="@color/blueLight"/>
 
                 <TextView
+                    android:id="@+id/tv_valueHeight"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="175"
+                    android:text="0"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
@@ -116,10 +118,11 @@
                     android:background="@color/blueLight"/>
 
                 <TextView
+                    android:id="@+id/tv_valueWeight"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="61"
+                    android:text="0"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
@@ -162,10 +165,11 @@
                     android:background="@color/blueLight"/>
 
                 <TextView
+                    android:id="@+id/tv_valueAge"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="19"
+                    android:text="0"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
@@ -199,10 +203,11 @@
                     android:background="@color/blueLight"/>
 
                 <TextView
+                    android:id="@+id/tv_valueGender"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="М"
+                    android:text="М/Ж"
                     android:textSize="45sp"
                     android:textStyle="bold"
                     android:textColor="@color/blueDarkDark"
