--- a/Health/app/src/main/res/layout/navigation_header.xml
+++ b/Health/app/src/main/res/layout/navigation_header.xml
@@ -24,6 +24,7 @@
         </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/tv_nameInHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
