--- a/Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Health/app/src/main/res/layout/fragment_profile.xml
@@ -27,9 +27,9 @@
             app:cardCornerRadius="45dp">
 
             <ImageView
+                android:id="@+id/iv_userPictureProf"
                 android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@drawable/heart" />
+                android:layout_height="90dp" />
 
         </androidx.cardview.widget.CardView>
 
