--- a/Health/app/src/main/res/layout/fragment_water.xml
+++ b/Health/app/src/main/res/layout/fragment_water.xml
@@ -1,109 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background_fragment_water"
+    android:fillViewport="true"
     tools:context=".FragmentWater">
-
-    <TextView
-        android:id="@+id/tv_goalWater"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="Цель: 0/2000"
-        android:textColor="@color/blueMiddle"
-        android:textSize="35sp"
-        android:gravity="center"/>
-
-
-    <ProgressBar
-        android:id="@+id/pb_goalWater"
-        android:progressDrawable="@drawable/water_progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        android:progress="0" />
-
-
-    <ImageView
-        android:id="@+id/iv_waterDrop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/water_drop_cry"
-        android:layout_gravity="center" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/background_fragment_water">
 
-        <Button
-            android:id="@+id/btn_minus"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_goalWater"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:text="—"
-            android:theme="@style/Widget.AppCompat.Button"
-            android:textColor="@color/white"
-            android:background="@drawable/background_fragment_water_button"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/et_volumeWater"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:inputType="number"
-            android:hint="мл"
-            android:textColor="@color/blue"
-            android:textColorHint="@color/purpleHint"
-            android:textSize="25sp"
-            android:background="@drawable/background_edit_text_authorization"
+            android:layout_margin="5dp"
+            android:text="Цель: 0/2000"
+            android:textColor="@color/blueMiddle"
+            android:textSize="35sp"
             android:gravity="center"/>
 
-        <Button
-            android:id="@+id/btn_plus"
+
+        <ProgressBar
+            android:id="@+id/pb_goalWater"
+            android:progressDrawable="@drawable/water_progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            android:progress="0" />
+
+
+        <ImageView
+            android:id="@+id/iv_waterDrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="10dp"
+            android:src="@drawable/water_drop_cry"
+            android:layout_gravity="center" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:text="—"
+                android:theme="@style/Widget.AppCompat.Button"
+                android:textColor="@color/white"
+                android:background="@drawable/background_fragment_water_button"
+                android:textSize="30sp"
+                android:textStyle="bold"/>
+
+            <EditText
+                android:id="@+id/et_volumeWater"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:inputType="number"
+                android:hint="мл"
+                android:textColor="@color/blue"
+                android:textColorHint="@color/purpleHint"
+                android:textSize="25sp"
+                android:background="@drawable/background_edit_text_authorization"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/btn_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="15dp"
+                android:layout_weight="1"
+                android:background="@drawable/background_fragment_water_button"
+                android:text="+"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/btn_dateRecordsWater"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_fragment_water_button"
-            android:text="+"
+            android:text="Дата"
+            android:textSize="25sp"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:background="@drawable/background_fragment_water_button"/>
+
+        <Button
+            android:id="@+id/btn_statistics"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="Статистика"
+            android:textSize="25sp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@drawable/background_fragment_water_button"/>
 
     </LinearLayout>
-
-
-    <Button
-        android:id="@+id/btn_statistics"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="Статистика"
-        android:textSize="25sp"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:background="@drawable/background_fragment_water_button"/>
-</LinearLayout>
+</ScrollView>
