--- a/Health/app/src/main/res/layout/activity_registration.xml
+++ b/Health/app/src/main/res/layout/activity_registration.xml
@@ -61,9 +61,10 @@
 
                 <ImageView
                     android:id="@+id/iv_userPictureReg"
+                    android:onClick="onClickUserPictureReg"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:onClick="onClickUserPictureReg"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/card0" />
 
             </androidx.cardview.widget.CardView>
