--- a/Health/app/src/main/res/layout/fragment_profile.xml
+++ b/Health/app/src/main/res/layout/fragment_profile.xml
@@ -29,7 +29,8 @@
             <ImageView
                 android:id="@+id/iv_userPictureProf"
                 android:layout_width="90dp"
-                android:layout_height="90dp" />
+                android:layout_height="90dp"
+                android:scaleType="centerCrop" />
 
         </androidx.cardview.widget.CardView>
 
