--- a/Health/app/src/main/res/layout/navigation_header.xml
+++ b/Health/app/src/main/res/layout/navigation_header.xml
@@ -19,7 +19,8 @@
             <ImageView
                 android:id="@+id/iv_userPictureHead"
                 android:layout_width="90dp"
-                android:layout_height="90dp"/>
+                android:layout_height="90dp"
+                android:scaleType="centerCrop" />
 
         </androidx.cardview.widget.CardView>
 
