--- a/Health/app/src/main/res/layout/activity_home.xml
+++ b/Health/app/src/main/res/layout/activity_home.xml
@@ -34,6 +34,7 @@
                 android:tint="@color/white" />
 
             <TextView
+                android:id="@+id/tv_titleHome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
