--- a/Health/app/src/main/res/layout/fragment_water.xml
+++ b/Health/app/src/main/res/layout/fragment_water.xml
@@ -116,7 +116,7 @@
             android:background="@drawable/background_button_water"/>
 
         <Button
-            android:id="@+id/btn_statistics"
+            android:id="@+id/btn_statisticsWater"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
