--- a/Health/app/src/main/res/layout/activity_sleep_statistics.xml
+++ b/Health/app/src/main/res/layout/activity_sleep_statistics.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".ActivityWaterStatistics">
+    android:background="@drawable/night"
+    tools:context=".ActivitySleepStatistics">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,8 +25,8 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/iv_backscapeWatStat"
-                android:onClick="onClickBackscapeWatStat"
+                android:id="@+id/iv_backscapeSleepStat"
+                android:onClick="onClickBackscapeSleepStat"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_backscape"/>
@@ -52,41 +52,41 @@
             android:elevation="5dp">
 
             <ToggleButton
-                android:id="@+id/tbnt_yearWatStat"
-                android:onClick="onClickYearWatStat"
+                android:id="@+id/tbnt_yearSleepStat"
+                android:onClick="onClickYearSleepStat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textOn="Год"
                 android:textOff="Год"
                 android:textColor="@color/white"
-                android:background="@drawable/background_button_statistic_water1"
+                android:background="@drawable/background_button_statistic_sleep1"
                 android:textSize="20sp"
                 android:textAllCaps="false"/>
 
             <ToggleButton
-                android:id="@+id/tbnt_monthWatStat"
-                android:onClick="onClickMonthWatStat"
+                android:id="@+id/tbnt_monthSleepStat"
+                android:onClick="onClickMonthSleepStat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textOn="Месяц"
                 android:textOff="Месяц"
                 android:textColor="@color/white"
-                android:background="@drawable/background_button_statistic_water2"
+                android:background="@drawable/background_button_statistic_sleep2"
                 android:textSize="20sp"
                 android:textAllCaps="false"/>
 
             <ToggleButton
-                android:onClick="onClickWeekWatStat"
-                android:id="@+id/tbnt_weekWatStat"
+                android:onClick="onClickWeekSleepStat"
+                android:id="@+id/tbnt_weekSleepStat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textOn="Неделя"
                 android:textOff="Неделя"
                 android:textColor="@color/white"
-                android:background="@drawable/background_button_statistic_water3"
+                android:background="@drawable/background_button_statistic_sleep3"
                 android:textSize="20sp"
                 android:textAllCaps="false"/>
 
@@ -95,12 +95,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/background_container_sleep"
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/ib_lastWatStat"
-                android:onClick="onClickLastWatStat"
+                android:id="@+id/ib_lastSleepStat"
+                android:onClick="onClickLastSleepStat"
                 android:src="@drawable/ic_chevron_left"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -108,10 +111,10 @@
                 android:layout_gravity="center"
                 android:textSize="20sp"
                 android:textAllCaps="false"
-                android:background="@color/white"/>
+                android:background="@android:color/transparent" />
 
             <TextView
-                android:id="@+id/tv_diapasonWatStat"
+                android:id="@+id/tv_diapasonSleepStat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
@@ -124,7 +127,7 @@
 
             <ImageButton
                 android:id="@+id/ib_nextSleepStat"
-                android:onClick="onClickNextWatStat"
+                android:onClick="onClickNextSleepStat"
                 android:src="@drawable/ic_chevron_right"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -132,18 +135,21 @@
                 android:layout_gravity="center"
                 android:textSize="20sp"
                 android:textAllCaps="false"
-                android:background="@color/white"/>
+                android:background="@android:color/transparent"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="vertical"
+            android:background="@drawable/background_container_sleep">
 
             <TextView
-                android:id="@+id/tv_dateWatStat"
+                android:id="@+id/tv_dateSleepStat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -153,7 +159,7 @@
                 android:textColor="@color/blueDarkDark"/>
 
             <TextView
-                android:id="@+id/tv_valueWatStat"
+                android:id="@+id/tv_valueSleepStat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -165,9 +171,12 @@
         </LinearLayout>
 
         <FrameLayout
-            android:id="@+id/fl_barChartWatStat"
+            android:id="@+id/fl_barChartSleepStat"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:background="@color/white"/>
 
         <androidx.gridlayout.widget.GridLayout
@@ -175,6 +184,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/background_container_sleep"
+
 
             app:columnCount="2"
             app:orientation="horizontal"
@@ -186,9 +199,9 @@
                 app:layout_columnWeight="1"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="Всего (мл)"
+                android:text="Всего"
                 android:textSize="20sp"
-                android:textColor="@color/blueDarkDark"/>
+                android:textColor="@color/blueDarkDark" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -196,12 +209,12 @@
                 app:layout_columnWeight="1"
                 app:layout_gravity="center"
                 android:gravity="center"
-                android:text="Среднее (мл)"
+                android:text="Среднее"
                 android:textSize="20sp"
                 android:textColor="@color/blueDarkDark"/>
 
             <TextView
-                android:id="@+id/tv_sumWatStat"
+                android:id="@+id/tv_sumDuringSleep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_gravity="center"
@@ -211,7 +224,49 @@
                 android:textColor="@color/blueDarkDark"/>
 
             <TextView
-                android:id="@+id/tv_averageWatStat"
+                android:id="@+id/tv_averageDuringSleep"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_gravity="center"
+                android:gravity="center"
+                android:text="1950"
+                android:textSize="35sp"
+                android:textColor="@color/blueDarkDark"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_columnWeight="1"
+                app:layout_gravity="center"
+                android:gravity="center"
+                android:text="Среднее время\nзасыпания"
+                android:textSize="20sp"
+                android:textColor="@color/blueDarkDark" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_columnWeight="1"
+                app:layout_gravity="center"
+                android:gravity="center"
+                android:text="Среднее время\nпробуждения"
+                android:textSize="20sp"
+                android:textColor="@color/blueDarkDark"/>
+
+            <TextView
+                android:id="@+id/tv_averageFallingAsleep"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_gravity="center"
+                android:gravity="center"
+                android:text="20 000"
+                android:textSize="35sp"
+                android:textColor="@color/blueDarkDark"/>
+
+            <TextView
+                android:id="@+id/tv_averageWakingUp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_gravity="center"
