--- a/Health/app/src/main/res/values/colors.xml
+++ b/Health/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="greyLight">#E6E2E2</color>
     <color name="greyLightLight">#EEEEEE</color>
     <color name="black">#000000</color>
+    <color name="blueLightLight">#D9F1FF</color>
 </resources>
