--- a/Health/app/src/main/res/values/styles.xml
+++ b/Health/app/src/main/res/values/styles.xml
@@ -24,6 +24,16 @@
         <item name="android:datePickerDialogTheme">@style/DatePickerWater</item>
     </style>
 
+    <style name="HomeActivity.CalorieCalculator" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="colorPrimaryDark">@color/blue</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlHighlight">@color/blueLight</item>
+        <item name="alertDialogTheme">@style/Dialog</item>
+        <item name="android:datePickerDialogTheme">@style/DatePickerWater</item>
+        <item name="spinnerStyle">@style/SpinnerPhysicalActivity</item>
+    </style>
+
     <style name="HomeActivity.Sleep" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <item name="colorPrimaryDark">@color/blue</item>
         <item name="colorControlActivated">@color/blueDarkDark</item>
@@ -50,6 +60,7 @@
         <item name="android:windowBackground">@drawable/background_alert_dialog</item>
         <item name="android:lineSpacingExtra">10sp</item>
         <item name="android:textSize">30sp</item>
+        <item name="buttonBarButtonStyle">@style/PositiveButton</item>
     </style>
 
     <style name="DialogSleep" parent="Theme.MaterialComponents.Light.Dialog.Alert">
@@ -57,6 +68,16 @@
         <item name="android:windowBackground">@drawable/background_alert_dialog_sleep</item>
         <item name="android:lineSpacingExtra">10sp</item>
         <item name="android:textSize">30sp</item>
+        <item name="buttonBarButtonStyle">@style/PositiveButton</item>
+    </style>
+
+    <style name="PositiveButton" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="android:textColor">@color/blueDarkDark</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="SpinnerPhysicalActivity" parent="Widget.AppCompat.Spinner">
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
 </resources>
