--- a/Health/app/src/main/res/layout/fragment_nutrition_control.xml
+++ b/Health/app/src/main/res/layout/fragment_nutrition_control.xml
@@ -1,8 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_addDay_NutCont"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="Добавить день"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textAllCaps="false"
+        android:background="@drawable/background_button_water" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_listDays_NutCont"
+        android:layout_below="@+id/btn_addDay_NutCont"
+        android:layout_above="@+id/btn_statisticsNutCont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:background="@drawable/background_listview_pager_food_menu"/>
+
+    <Button
+        android:id="@+id/btn_statisticsNutCont"
+        android:layout_above="@+id/ll_bottomNavigation_NutCont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="Статистика"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textAllCaps="false"
+        android:background="@drawable/background_button_water" />
+
+    <LinearLayout
+        android:id="@+id/ll_bottomNavigation_NutCont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:drawableTop="@drawable/ic_date"
+            android:tint="@color/white"
+            android:text="Контроль"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:background="@color/blueDarkDark"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_foodMenu_NutCont"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:drawableTop="@drawable/ic_restaurant_menu"
+            android:tint="@color/white"
+            android:text="Меню"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:background="@color/blue"
+            android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/btn_calorieCalculator_NutCont"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:drawableTop="@drawable/ic_calc"
+            android:tint="@color/white"
+            android:text="Калькулятор"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:background="@color/blue"
+            android:textAllCaps="false"/>
+
+    </LinearLayout>
+</RelativeLayout>
